# WebTelegramBot

./: amvera.yml  docker-compose.yml  main.py  pyproject.toml
app/api/: dao.py  router.py
app/bot/handlers/: admin_router.py  user_router.py
app/core/: config.py
app/db/: base.py  session.py
app/migration/: env.py
app/migration/versions/: 446128e3e20b_initial_revision.py
app/models/: general_table.py
app/pages/: router.py
app/static/js/: index.js
app/templates/: with_peoples_requests.html
